chore: added extra interesting birds eye view of polars

--- a/pandera_poc.ipynb
+++ b/pandera_poc.ipynb
@@ -18,6 +18,10 @@
    "source": [
     "# Polars with Pandera for type checking\n",
     "\n",
+    "\n",
+    "interesting overview\n",
+    "* https://pola.rs/posts/polars_birds_eye_view/\n",
+    "\n",
     "useful links\n",
     "* https://www.rhosignal.com/posts/polars-pandas-cheatsheet/\n",
     "* https://www.rhosignal.com/posts/pandas-to-polars-time-series/\n",
